# learn-gb-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2_ttf.cmake
gbemu/: main.c
include/: bus.h  cart.h  common.h  cpu.h  dbg.h  dma.h  emu.h  gamepad.h  instructions.h  interrupts.h  io.h  lcd.h  ppu.h  ppu_sm.h  ram.h  stack.h  timer.h  ui.h
lib/: bus.c  cart.c  cpu.c  cpu_fetch.c  cpu_proc.c  cpu_util.c  dbg.c  dma.c  emu.c  gamepad.c  instructions.c  interrupts.c  io.c  lcd.c  ppu.c  ppu_pipeline.c  ppu_sm.c  ram.c  stack.c  timer.c  ui.c
